# cvelang

./: .gitignore  Dockerfile  cve_util.py  docker-compose.yml  pyproject.toml
cvelang/: code_util.py  cve_loader.py  cve_util.py  dev_test_references.py  reference_util.py  references_util.py
cvelang/sql/: migration.sql  schema.sql
examples/: explore_cves.py
llama/: Dockerfile  run.sh
tests/: test_cve_loader.py  test_cve_search.py  test_cve_util.py
