[project]
name = "cvelang"
version = "0.1.0"
description = "Something with CVEs and LLMs."
requires-python = ">=3.8"
dependencies = [
    "sentence-transformers",
    "psycopg2-binary",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true 
