[project]
name = "cvelang"
version = "0.1.0"
description = "Something with CVEs and LLMs."
authors = [
    { name = "Eric Ihli", email = "eihli@owoga.com" },
]

[tool.poetry]
name = "cvelang"
version = "0.1.0"
description = "Something with CVEs and LLMs."
authors = [ "Eric Ihli <eihli@owoga.com>" ]



[tool.poetry.dependencies]
python = ">=3.9"
sentence-transformers = "*"
psycopg2-binary = "*"
numpy = "*"
jsonschema2db = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
